--- a/views/lab.ejs
+++ b/views/lab.ejs
@@ -10,6 +10,11 @@
         <div>
             <label for="test_name">Test Name:</label>
             <input type="text" id="test_name" name="test_name">
+            <select name="patient_id">
+                <% dr_patients.forEach(patient => { %>
+                <option value="<%= patient.file_id  %>"><%= patient.patient_name  %></option>
+                <% }) %>
+              </select>
             <input type="file" name="file">
             <input type="submit">
         </div>
@@ -21,12 +26,14 @@
             <tr>
                 <th>Test Name</th>
                 <th>Doctor Name</th>
+                <th>patient id</th>
                 <th>File</th>
             </tr>
             <% labData.forEach(item => { %>
             <tr>
                 <td><%= item.test_name %></td>
                 <td><%= item.dr_name %></td>
+                <td><%= item.file_id %></td>
                 <td><% if (item.file_filename) { %>
                     <a href="../file_uploads/<%= item.file_filename %>" target="_blank" rel="noopener noreferrer">View File</a>
                     <% }%>
