--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -67,8 +67,12 @@
         <div class="task_form">
           <form action="/tasks" method="post">
             <div>
-              <label for="patient_id">Patient ID:</label>
-              <input type="number" id="patient_id" name="patient_id" required />
+
+              <select name="patient_id">
+                <% dr_patients.forEach(patient => { %>
+                <option value="<%= patient.file_id  %>"><%= patient.patient_name  %></option>
+                <% }) %>
+              </select>
             </div>
             <input type="hidden" name="formType" value="addTask" required />
             <!-- This line was added -->
