--- a/views/register.ejs
+++ b/views/register.ejs
@@ -83,7 +83,7 @@
   <label for="name">Name:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
   <input type="text" id="name" name="name" required />
 
-  <label for="email">Email:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
+  <label for="email">Email:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
   <input type="email" id="email" name="email" required />
 <br>
   <label for="phoneNumber">Phone number:</label>
@@ -95,7 +95,7 @@
   <label for="birthDate">Date of Birth:&nbsp&nbsp&nbsp</label>
   <input type="date" id="birthDate" name="birthDate" required />
 
-  <label for="spaciality"> spaciality:</label>
+  <label for="spaciality"> spaciality:&nbsp</label>
   <input type="text" id="spaciality" name="spaciality" required />
 <br><br>
   <label id="ggg">Gender:</label>
@@ -140,6 +140,7 @@
     
         <!-- Doctors -->
         <ul>
+          <center><h2>Doctor</h2></center>
             <% doctors.forEach(doctor => { %>
             <div class="it_show_users">
                 <div class="namess">Name:</div >
@@ -155,6 +156,8 @@
     
         <!-- Nurses -->
         <ul>
+          <center><h2>Nurse</h2></center>
+
             <% nurses.forEach(nurse => { %>
             <div class="it_show_users">
                 <div class="namess">Name:</div >
@@ -170,6 +173,8 @@
     
         <!-- Staff -->
         <ul>
+          <center><h2>Staff</h2></center>
+
             <% staff.forEach(staffMember => { %>
             <div class="it_show_users">
                 <div class="namess">Name:</div >
@@ -183,6 +188,8 @@
             <% }) %>
         </ul>
     <ul>
+      <center><h2>Admittion </h2></center>
+
       <% admitions.forEach(admition => { %>
       <div class="it_show_users">
           <div class="namess">Name:</div >
