--- a/views/admissionPatient.ejs
+++ b/views/admissionPatient.ejs
@@ -69,7 +69,7 @@
             <a class="delete" data-dtask="<%= admission_patient.file_id%>" href="">Delete</a>
             <form action="admissionPatient" method="post">
               <input type="hidden" name="file_id" value="<%= admission_patient.file_id %>" >
-              <input type="submit" name="taskIds" value="open file">
+              <input type="submit" name="taskIds" value="Open File" class="dell">
             </form>
           </div>
         <% }) %>
