--- a/public/style.css
+++ b/public/style.css
@@ -117,7 +117,7 @@ font-weight: 500;
     border-radius: 15px;
     background-color: #9fc2e1;
    width: 50vw;
-   height: 37vh;
+   height: 35vh;
 }
 .task_form p{
     font-size: 1.3em;
@@ -126,17 +126,23 @@ font-weight: 500;
 }
 
 .task_form select {
-    padding: 2px;
-    font-size: 1em;
-    font-weight: bolder;
-    color:rgb(85, 141, 250);
+    background-color: white;
     border: none;
     outline: none;
-width: 7vw;
+    padding: 4px;
+    color: rgb(3, 49, 92);
 }
 .login_error{
     font-weight: bold;
     color: red;
+}
+
+.task_form option {
+background-color: white;
+border: none;
+outline: none;
+padding: 4px;
+color: rgb(3, 49, 92);
 }
 .task_form label{
 font-size: 1.4em;
@@ -177,6 +183,15 @@ color: rgb(3, 49, 92);
     text-decoration: none;
     color: rgb(3, 49, 92);
     float: right;
+}
+.files_button{
+    padding: 1px;
+background-color: rgb(3, 49, 92);
+color: white;
+position: absolute;
+bottom: 2px;
+right: 5px;
+
 }
 .delete{
     height: 2vh;
@@ -234,20 +249,19 @@ border-radius: 5px;
     padding: 5px;
     resize: none;
 font-size: 1.2em;
-height: 20vh;
+height: 15vh;
     outline: none;
     width: 35vw;
 }
 .task_form button{
-    color: white;
-    font-size: 1.2em;
-    font-weight: bold;
+    color: rgb(3, 49, 92);
+    font-size: 1em;
     border-radius: 10px;
     float: right;
     width: 8vw;
     height: 5.5vh;
     border: none;
-    background-color: rgb(3, 49, 92);
+    background-color: white;
 }
 
 .login_error{
@@ -328,8 +342,8 @@ position: relative;
     border: 2px solid #9fc2e1;
 }
 .files_divvv{
+    position: relative;
     border-radius: 10px;    
-height: 4vh;
     padding: 10px;
     padding-left: 10px;
     font-weight: bold;
@@ -346,7 +360,7 @@ height: 4vh;
 }
 .files_divvv span{
     padding-left: 10px;
-    font-weight: 600;
+    font-weight: 500;
 
 color: white;    
 }
