--- a/views/scan.ejs
+++ b/views/scan.ejs
@@ -10,6 +10,11 @@
         <div>
             <label for="scan_name">Test Name:</label>
             <input type="text" id="scan_name" name="scan_name">
+            <select name="patient_id">
+                <% dr_patients.forEach(patient => { %>
+                <option value="<%= patient.file_id  %>"><%= patient.patient_name  %></option>
+                <% }) %>
+              </select>
             <input type="file" name="file">
             <input type="submit">
         </div>
@@ -21,12 +26,14 @@
             <tr>
                 <th>Test Name</th>
                 <th>Doctor Name</th>
+                <th>file id</th>
                 <th>File</th>
             </tr>
             <% scanData.forEach(item => { %>
             <tr>
                 <td><%= item.scan_name %></td>
                 <td><%= item.dr_id %></td>
+                <td><%= item.file_id %></td>
                 <td><% if (item.result) { %>
                     <a href="../file_uploads/<%= item.result %>" target="_blank" rel="noopener noreferrer">View results</a>
                     <% }%>
