--- a/views/lab.ejs
+++ b/views/lab.ejs
@@ -1,110 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha384-..."
-      crossorigin="anonymous"
-    />
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LAb</title>
-  </head>
+
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-..." crossorigin="anonymous" />
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LAb</title>
+</head>
+
 <body>
-    <br><br>
-    <center>
+  
+  <br><br>
+
+  <center>
     <div class="Lab_form">
-    <form action="/lab" method="post" enctype="multipart/form-data">
+      <form action="/lab" method="post" enctype="multipart/form-data">
         <div>
-            <br>
+          <br>
           <label style="display: inline;"> Patient ID:</label>
 
-          
-          <select name="patient_id" class="custom-select">
-            <% dr_patients.forEach(patient => { %>
-              <option style="border-radius: 10px;" id="option" value="<%= patient.file_id  %>"><%= patient.patient_name  %></option>
-            <% }) %>
-          </select>
-          
-              <br><br><br>
-            <label for="test_name">Test Name:</label>
-            <input type="text" id="test_name" name="test_name">
-            
 
-              <input type="submit">
+          <select name="patient_id" class="custom-select">
+            <% dr_patients.forEach(patient=> { %>
+              <option style="border-radius: 10px;" id="option" value="<%= patient.file_id  %>">
+                <%= patient.patient_name %>
+              </option>
+              <% }) %>
+          </select>
+
+          <br><br><br>
+          <label for="test_name">Test Name:</label>
+          <input type="text" id="test_name" name="test_name">
+
+
+          <input type="submit">
 
         </div>
-       
-    </form>
-</div>
-</center>
 
-    <% if (labData) { %>
-       
-
+      </form>
+    </div>
+  </center>
+  <div class="grid-wrapper">
+    <div class="grid-container grid-left">
+        <% if (labData) { %>
             <% labData.forEach(item => { %>
-                <center>
-           <div class="test_div">
-           <span>Test Name: </span>  <%= item.test_name %>   <span>From Doctor:</span><%= item.dr_name %> <span>Patient ID:</span>     <%= item.file_id %>
-                <%= item.test_id %>
-                
-                
-            
-                <% if (item.file_filename) { %>
-                  
-                    <center>
-                        <div style="margin-top: 40px;">
-                    <p style="display: inline;"> Results:</p>
-                    
-
-                    <a href="../file_uploads/<%= item.file_filename %>" target="_blank" rel="noopener noreferrer" class="view_filee">View File</a>
-                </center>
-            </div>
-                    <% } else { %>
-                        
+                <% if (!item.file_filename) { %>
+                    <div class="test_div left-side">
+                        <!-- Content for items without file_filename -->
+                        <span>Test Name: </span><%= item.test_name %>
+                        <span>From Doctor:</span><%= item.dr_name %>
+                        <span>Patient ID:</span><%= item.file_id %><%= item.test_id %>
                         <form action="/lab" method="post" enctype="multipart/form-data">
                             <input type="hidden" name="test_name" value="<%= item.test_name %>">
-                            <input type="hidden" name="file_idd" value="<%= item.test_id  %>">
+                            <input type="hidden" name="file_idd" value="<%= item.test_id %>">
                             <div class="file-container">
-                            <p style="display:inline; color: white;">Fill results:</p>
-
+                                <p style="display:inline; color: white;">Fill results:</p>
                                 <label for="file" class="file-label">Choose File</label>
                                 <input type="file" id="file" class="file-input" name="file">
-                              </div>
-                              
+                            </div>
                             <input type="submit">
                         </form>
-                        <% } %>
-       
                     </div>
-                </center>
+                <% } %>
             <% }); %>
-
-    <% } else { %>
-        <p>No data available</p>
-    <% } %>
-
-
-    <% if (isDoctor) { %>
-        <h1 style="color: rgb(3, 49, 92)">Welcome, Doctor!</h1>
-  
-        <% } else { %>
-        <h1 style="color: rgb(3, 49, 92)">You are not a doctor.</h1>
-        <!-- Other content for non-doctors -->
         <% } %>
-        <% if (islab) { %>
-            <h1>lab staff</h1>
-            <% } %>
-        <center>
-          <script>
-           
-           var isDoctor = '<%= JSON.stringify(isDoctor) %>;'
-           var islab = '<%= JSON.stringify(islab) %>;'
-          console.log("Is user a doctor?", isDoctor);
-          console.log("Is user a doctor?", islab);
+    </div>
+    <div class="grid-container grid-right">
+        <% if (labData) { %>
+            <% labData.forEach(item => { %>
+                <% if (item.file_filename) { %>
+                    <div class="test_div right-side">
+                        <!-- Content for items with file_filename -->
+                        <span>Test Name: </span><%= item.test_name %>
+                        <span>From Doctor:</span><%= item.dr_name %>
+                        <span>Patient ID:</span><%= item.file_id %><%= item.test_id %>
+                        <div class="result-section">
+                          <center>
+                            <div style="margin-top: 30px;">
+                            <p style="display: inline;"> Results:</p>
+                            <a href="../file_uploads/<%= item.file_filename %>" target="_blank" rel="noopener noreferrer" class="view_filee">View File</a>
+                          </div>
+                          </center>
 
-        </script>
+                        </div>
+                    </div>
+                <% } %>
+            <% }); %>
+        <% } %>
+    </div>
+</div>
+
+
+            <% if (isDoctor) { %>
+              <h1 style="color: rgb(3, 49, 92)">Welcome, Doctor!</h1>
+
+              <% } else { %>
+                <h1 style="color: rgb(3, 49, 92)">You are not a doctor.</h1>
+                <!-- Other content for non-doctors -->
+                <% } %>
+                  <% if (islab) { %>
+                    <h1>lab staff</h1>
+                    <% } %>
+                      <center>
+                        <script>
+
+                          var isDoctor = '<%= JSON.stringify(isDoctor) %>;'
+                          var islab = '<%= JSON.stringify(islab) %>;'
+                          console.log("Is user a doctor?", isDoctor);
+                          console.log("Is user a doctor?", islab);
+
+                        </script>
+               <input type="text" class="it_search" id="searchInput" placeholder="Search..." onkeyup="searchFunction()" style="margin-left:40px; margin-bottom: 20px;"/>
+
 </body>
+
 </html>
